syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerCurrencyProto";

service UserdataService {
  rpc GetCurrentUser (UsernameRequest) returns (UserResponse) {}
}

message UsernameRequest {
  string username = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string avatar = 5;
}
